@@ -22,6 +22,7 @@ Broker:
   reconnect, having sent DISCONNECT on a previous session. Closes #1227.
 - Disable TLS renegotiation. Client initiated renegotiation is considered to
   be a potential attack vector against servers. Closes #1257.
+- Fix incorrect shared subscription topic '$shared'.
 
 Client library:
 - Fix typo causing build error on Windows when building without TLS support.
